--- a/gdl2/Diagnostic_Criteria_FH.v0.test.yml
+++ b/gdl2/Diagnostic_Criteria_FH.v0.test.yml
@@ -20,17 +20,37 @@ test_cases:
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5,mmol/l
   expected_output:
     1: {}
-- id: Test cutoff value for <20 1st degree FH
+- id: Test cutoff value for <20 1st degree FH, Cholesterol <5.7
   input:
     1:
       gt0004|Age: 0|local::at0009|<20|
       gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.7,mmol/l
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.5,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 0
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for <20 1st degree FH, Cholesterol >5.7
+  input:
+    1:
+      gt0004|Age: 0|local::at0009|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.8,mmol/l
   expected_output:
     1:
       gt0007|Total score: 0
       gt0013|Interpretation: Definite
-- id: Test cutoff value for <20 2nd degree FH
+- id: Test cutoff value for <20 2nd degree FH, Cholesterol <5.9
+  input:
+    1:
+      gt0004|Age: 0|local::at0009|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.8,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 1
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for <20 2nd degree FH, Cholesterol >5.9
   input:
     1:
       gt0004|Age: 0|local::at0009|<20|
@@ -40,7 +60,17 @@ test_cases:
     1:
       gt0007|Total score: 1
       gt0013|Interpretation: Definite
-- id: Test cutoff value for <20 3rd degree FH
+- id: Test cutoff value for <20 3rd degree FH, Cholesterol <6.2
+  input:
+    1:
+      gt0004|Age: 0|local::at0009|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.1,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 2
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for <20 3rd degree FH, Cholesterol >6.2
   input:
     1:
       gt0004|Age: 0|local::at0009|<20|
@@ -50,7 +80,17 @@ test_cases:
     1:
       gt0007|Total score: 2
       gt0013|Interpretation: Definite
-- id: Test cutoff value for 20-29 1st degree FH
+- id: Test cutoff value for 20-29 1st degree FH, Cholesterol <6.2
+  input:
+    1:
+      gt0004|Age: 3|local::at0010|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.1,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 3
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for 20-29 1st degree FH, Cholesterol >6.2
   input:
     1:
       gt0004|Age: 3|local::at0010|20-29|
@@ -60,17 +100,37 @@ test_cases:
     1:
       gt0007|Total score: 3
       gt0013|Interpretation: Definite
-- id: Test cutoff value for 20-29 2nd degree FH
+- id: Test cutoff value for 20-29 2nd degree FH, Cholesterol <6.5
   input:
     1:
       gt0004|Age: 3|local::at0010|20-29|
       gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.5,mmol/l
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.3,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 4
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for 20-29 2nd degree FH, Cholesterol >6.5
+  input:
+    1:
+      gt0004|Age: 3|local::at0010|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.6,mmol/l
   expected_output:
     1:
       gt0007|Total score: 4
       gt0013|Interpretation: Definite
-- id: Test cutoff value for 20-29 3rd degree FH
+- id: Test cutoff value for 20-29 3rd degree FH, Cholesterol <6.7
+  input:
+    1:
+      gt0004|Age: 3|local::at0010|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.6,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 5
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for 20-29 3rd degree FH, Cholesterol >6.7
   input:
     1:
       gt0004|Age: 3|local::at0010|20-29|
@@ -80,27 +140,37 @@ test_cases:
     1:
       gt0007|Total score: 5
       gt0013|Interpretation: Definite
-- id: Test cutoff value for 30-39 1st degree FH
+- id: Test cutoff value for 30-39 1st degree FH, Cholesterol <7
   input:
     1:
       gt0004|Age: 6|local::at0011|30-39|
       gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7,mmol/l
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.9,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 6
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for 30-39 1st degree FH, Cholesterol >7
+  input:
+    1:
+      gt0004|Age: 6|local::at0011|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.1,mmol/l
   expected_output:
     1:
       gt0007|Total score: 6
       gt0013|Interpretation: Definite
-- id: Test cutoff value for 30-39 3rd degree FH
+- id: Test cutoff value for 30-39 2nd degree FH, Cholesterol <7.2
   input:
     1:
       gt0004|Age: 6|local::at0011|30-39|
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.6,mmol/l
+      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.1,mmol/l
   expected_output:
     1:
-      gt0007|Total score: 8
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 30-39 2nd degree FH
+      gt0007|Total score: 7
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for 30-39 2nd degree FH, Cholesterol >7.2
   input:
     1:
       gt0004|Age: 6|local::at0011|30-39|
@@ -110,7 +180,37 @@ test_cases:
     1:
       gt0007|Total score: 7
       gt0013|Interpretation: Definite
-- id: Test cutoff value for >40 1st degree FH
+- id: Test cutoff value for 30-39 3rd degree FH, Cholesterol <7.5
+  input:
+    1:
+      gt0004|Age: 6|local::at0011|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.4,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 8
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for 30-39 3rd degree FH, Cholesterol >7.5
+  input:
+    1:
+      gt0004|Age: 6|local::at0011|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.6,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 8
+      gt0013|Interpretation: Definite
+- id: Test cutoff value for >40 1st degree FH, Cholesterol <7.5
+  input:
+    1:
+      gt0004|Age: 9|local::at0012|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.4,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 9
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for >40 1st degree FH, Cholesterol >7.5
   input:
     1:
       gt0004|Age: 9|local::at0012|>40|
@@ -120,17 +220,37 @@ test_cases:
     1:
       gt0007|Total score: 9
       gt0013|Interpretation: Definite
-- id: Test cutoff value for >40 2nd degree FH
+- id: Test cutoff value for >40 2nd degree FH, Cholesterol <7.8
   input:
     1:
       gt0004|Age: 9|local::at0012|>40|
       gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.8,mmol/l
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.7,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 10
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for >40 2nd degree FH, Cholesterol >7.8
+  input:
+    1:
+      gt0004|Age: 9|local::at0012|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.9,mmol/l
   expected_output:
     1:
       gt0007|Total score: 10
       gt0013|Interpretation: Definite
-- id: Test cutoff value for >40 3rd degree FH
+- id: Test cutoff value for >40 3rd degree FH, Cholesterol <8
+  input:
+    1:
+      gt0004|Age: 9|local::at0012|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.9,mmol/l
+  expected_output:
+    1:
+      gt0007|Total score: 11
+      gt0013|Interpretation: Unlikely
+- id: Test cutoff value for >40 3rd degree FH, Cholesterol >8
   input:
     1:
       gt0004|Age: 9|local::at0012|>40|
