--- a/gdl2/RiskE_Score_guideline.v1.test.yml
+++ b/gdl2/RiskE_Score_guideline.v1.test.yml
@@ -15,7 +15,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 0
-      gt0014|Predicted in-hospital postop mortality: 3.36 %
+      gt0014|Predicted in-hospital postop mortality: 3.36,%
 - id: score 5
   input:
     1:
@@ -30,7 +30,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 5
-      gt0014|Predicted in-hospital postop mortality: 5.64 %
+      gt0014|Predicted in-hospital postop mortality: 5.64,%
 - id: score 6
   input:
     1:
@@ -45,7 +45,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 6
-      gt0014|Predicted in-hospital postop mortality: 6.22 %
+      gt0014|Predicted in-hospital postop mortality: 6.22,%
 - id: score 7
   input:
     1:
@@ -60,7 +60,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 7
-      gt0014|Predicted in-hospital postop mortality: 6.42 %
+      gt0014|Predicted in-hospital postop mortality: 6.42,%
 - id: score 9
   input:
     1:
@@ -75,7 +75,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 9
-      gt0014|Predicted in-hospital postop mortality: 7.96 %
+      gt0014|Predicted in-hospital postop mortality: 7.96,%
 - id: score 10
   input:
     1:
@@ -90,7 +90,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 10
-      gt0014|Predicted in-hospital postop mortality: 9.33 %
+      gt0014|Predicted in-hospital postop mortality: 9.33,%
 - id: score 11
   input:
     1:
@@ -105,7 +105,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 11
-      gt0014|Predicted in-hospital postop mortality: 10.24 %
+      gt0014|Predicted in-hospital postop mortality: 10.24,%
 - id: score 12
   input:
     1:
@@ -120,7 +120,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 12
-      gt0014|Predicted in-hospital postop mortality: 10.56 %
+      gt0014|Predicted in-hospital postop mortality: 10.56,%
 - id: score 13
   input:
     1:
@@ -135,7 +135,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 13
-      gt0014|Predicted in-hospital postop mortality: 11.61 %
+      gt0014|Predicted in-hospital postop mortality: 11.61,%
 - id: score 14
   input:
     1:
@@ -150,7 +150,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 14
-      gt0014|Predicted in-hospital postop mortality: 12.61 %
+      gt0014|Predicted in-hospital postop mortality: 12.61,%
 - id: score 15
   input:
     1:
@@ -165,7 +165,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 15
-      gt0014|Predicted in-hospital postop mortality: 13.87 %
+      gt0014|Predicted in-hospital postop mortality: 13.87,%
 - id: score 16
   input:
     1:
@@ -180,7 +180,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 16
-      gt0014|Predicted in-hospital postop mortality: 14.93 %
+      gt0014|Predicted in-hospital postop mortality: 14.93,%
 - id: score 18
   input:
     1:
@@ -195,7 +195,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 18
-      gt0014|Predicted in-hospital postop mortality: 18.32 %
+      gt0014|Predicted in-hospital postop mortality: 18.32,%
 - id: score 19
   input:
     1:
@@ -210,7 +210,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 19
-      gt0014|Predicted in-hospital postop mortality: 19.5 %
+      gt0014|Predicted in-hospital postop mortality: 19.5,%
 - id: score 20
   input:
     1:
@@ -225,7 +225,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 20
-      gt0014|Predicted in-hospital postop mortality: 21.26 %
+      gt0014|Predicted in-hospital postop mortality: 21.26,%
 - id: score 21
   input:
     1:
@@ -240,7 +240,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 21
-      gt0014|Predicted in-hospital postop mortality: 22.38 %
+      gt0014|Predicted in-hospital postop mortality: 22.38,%
 - id: score 22
   input:
     1:
@@ -255,7 +255,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 22
-      gt0014|Predicted in-hospital postop mortality: 24.17 %
+      gt0014|Predicted in-hospital postop mortality: 24.17,%
 - id: score 23
   input:
     1:
@@ -270,7 +270,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 23
-      gt0014|Predicted in-hospital postop mortality: 26.66 %
+      gt0014|Predicted in-hospital postop mortality: 26.66,%
 - id: score 24
   input:
     1:
@@ -285,7 +285,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 24
-      gt0014|Predicted in-hospital postop mortality: 28.87 %
+      gt0014|Predicted in-hospital postop mortality: 28.87,%
 - id: score 25
   input:
     1:
@@ -300,7 +300,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 25
-      gt0014|Predicted in-hospital postop mortality: 31.02 %
+      gt0014|Predicted in-hospital postop mortality: 31.02,%
 - id: score 26
   input:
     1:
@@ -315,7 +315,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 26
-      gt0014|Predicted in-hospital postop mortality: 32.8 %
+      gt0014|Predicted in-hospital postop mortality: 32.08,%
 - id: score 27
   input:
     1:
@@ -330,7 +330,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 27
-      gt0014|Predicted in-hospital postop mortality: 35.13 %
+      gt0014|Predicted in-hospital postop mortality: 35.13,%
 - id: score 28
   input:
     1:
@@ -345,7 +345,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 28
-      gt0014|Predicted in-hospital postop mortality: 36.79 %
+      gt0014|Predicted in-hospital postop mortality: 36.79,%
 - id: score 29
   input:
     1:
@@ -360,7 +360,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 29
-      gt0014|Predicted in-hospital postop mortality: 39.59 %
+      gt0014|Predicted in-hospital postop mortality: 39.59,%
 - id: score 30
   input:
     1:
@@ -375,7 +375,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 30
-      gt0014|Predicted in-hospital postop mortality: 42.17 %
+      gt0014|Predicted in-hospital postop mortality: 42.17,%
 - id: score 31
   input:
     1:
@@ -390,7 +390,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 31
-      gt0014|Predicted in-hospital postop mortality: 44.64 %
+      gt0014|Predicted in-hospital postop mortality: 44.64,%
 - id: score 32
   input:
     1:
@@ -405,7 +405,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 32
-      gt0014|Predicted in-hospital postop mortality: 47.57 %
+      gt0014|Predicted in-hospital postop mortality: 47.57,%
 - id: score 33
   input:
     1:
@@ -420,7 +420,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 33
-      gt0014|Predicted in-hospital postop mortality: 49.73 %
+      gt0014|Predicted in-hospital postop mortality: 49.73,%
 - id: score 34
   input:
     1:
@@ -435,7 +435,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 34
-      gt0014|Predicted in-hospital postop mortality: 52.17 %
+      gt0014|Predicted in-hospital postop mortality: 52.17,%
 - id: score 35
   input:
     1:
@@ -450,7 +450,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 35
-      gt0014|Predicted in-hospital postop mortality: 54.39 %
+      gt0014|Predicted in-hospital postop mortality: 54.39,%
 - id: score 36
   input:
     1:
@@ -465,7 +465,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 36
-      gt0014|Predicted in-hospital postop mortality: 56.77 %
+      gt0014|Predicted in-hospital postop mortality: 56.77,%
 - id: score 37
   input:
     1:
@@ -480,7 +480,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 37
-      gt0014|Predicted in-hospital postop mortality: 59.08 %
+      gt0014|Predicted in-hospital postop mortality: 59.08,%
 - id: score 38
   input:
     1:
@@ -495,7 +495,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 38
-      gt0014|Predicted in-hospital postop mortality: 61.96 %
+      gt0014|Predicted in-hospital postop mortality: 61.96,%
 - id: score 39
   input:
     1:
@@ -510,7 +510,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 39
-      gt0014|Predicted in-hospital postop mortality: 64.82 %
+      gt0014|Predicted in-hospital postop mortality: 64.82,%
 - id: score 40
   input:
     1:
@@ -525,7 +525,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 40
-      gt0014|Predicted in-hospital postop mortality: 66.75 %
+      gt0014|Predicted in-hospital postop mortality: 66.75,%
 - id: score 41
   input:
     1:
@@ -540,7 +540,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 41
-      gt0014|Predicted in-hospital postop mortality: 68.52 %
+      gt0014|Predicted in-hospital postop mortality: 68.52,%
 - id: score 42
   input:
     1:
@@ -555,7 +555,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 42
-      gt0014|Predicted in-hospital postop mortality: 70.59 %
+      gt0014|Predicted in-hospital postop mortality: 70.59,%
 - id: score 43
   input:
     1:
@@ -570,7 +570,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 43
-      gt0014|Predicted in-hospital postop mortality: 72.32 %
+      gt0014|Predicted in-hospital postop mortality: 72.32,%
 - id: score 44
   input:
     1:
@@ -585,7 +585,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 44
-      gt0014|Predicted in-hospital postop mortality: 74.72 %
+      gt0014|Predicted in-hospital postop mortality: 74.72,%
 - id: score 45
   input:
     1:
@@ -600,7 +600,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 45
-      gt0014|Predicted in-hospital postop mortality: 76.65 %
+      gt0014|Predicted in-hospital postop mortality: 76.65,%
 - id: score 46
   input:
     1:
@@ -615,7 +615,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 46
-      gt0014|Predicted in-hospital postop mortality: 78.61 %
+      gt0014|Predicted in-hospital postop mortality: 78.61,%
 - id: score 47
   input:
     1:
@@ -630,7 +630,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 47
-      gt0014|Predicted in-hospital postop mortality: 80.09 %
+      gt0014|Predicted in-hospital postop mortality: 80.09,%
 - id: score 48
   input:
     1:
@@ -645,7 +645,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 48
-      gt0014|Predicted in-hospital postop mortality: 81.39 %
+      gt0014|Predicted in-hospital postop mortality: 81.39,%
 - id: score 49
   input:
     1:
@@ -660,7 +660,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 49
-      gt0014|Predicted in-hospital postop mortality: 82.97 %
+      gt0014|Predicted in-hospital postop mortality: 82.97,%
 - id: score 50
   input:
     1:
@@ -675,7 +675,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 50
-      gt0014|Predicted in-hospital postop mortality: 83.98 %
+      gt0014|Predicted in-hospital postop mortality: 83.98,%
 - id: score 51
   input:
     1:
@@ -690,7 +690,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 51
-      gt0014|Predicted in-hospital postop mortality: 85.74 %
+      gt0014|Predicted in-hospital postop mortality: 85.74,%
 - id: score 52
   input:
     1:
@@ -705,7 +705,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 52
-      gt0014|Predicted in-hospital postop mortality: 86.67 %
+      gt0014|Predicted in-hospital postop mortality: 86.67,%
 - id: score 53
   input:
     1:
@@ -720,7 +720,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 53
-      gt0014|Predicted in-hospital postop mortality: 88.05 %
+      gt0014|Predicted in-hospital postop mortality: 88.05,%
 - id: score 54
   input:
     1:
@@ -735,7 +735,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 54
-      gt0014|Predicted in-hospital postop mortality: 89.08 %
+      gt0014|Predicted in-hospital postop mortality: 89.08,%
 - id: score 55
   input:
     1:
@@ -750,7 +750,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 55
-      gt0014|Predicted in-hospital postop mortality: 90.09 %
+      gt0014|Predicted in-hospital postop mortality: 90.09,%
 - id: score 56
   input:
     1:
@@ -765,7 +765,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 56
-      gt0014|Predicted in-hospital postop mortality: 90.76 %
+      gt0014|Predicted in-hospital postop mortality: 90.76,%
 - id: score 57
   input:
     1:
@@ -780,7 +780,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 57
-      gt0014|Predicted in-hospital postop mortality: 91.18 %
+      gt0014|Predicted in-hospital postop mortality: 91.18,%
 - id: score 58
   input:
     1:
@@ -795,7 +795,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 58
-      gt0014|Predicted in-hospital postop mortality: 92.28 %
+      gt0014|Predicted in-hospital postop mortality: 92.28,%
 - id: score 59
   input:
     1:
@@ -810,7 +810,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 59
-      gt0014|Predicted in-hospital postop mortality: 92.93 %
+      gt0014|Predicted in-hospital postop mortality: 92.93,%
 - id: score 60
   input:
     1:
@@ -825,7 +825,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 60
-      gt0014|Predicted in-hospital postop mortality: 94.13 %
+      gt0014|Predicted in-hospital postop mortality: 94.13,%
 - id: score 61
   input:
     1:
@@ -840,7 +840,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 61
-      gt0014|Predicted in-hospital postop mortality: 94.29 %
+      gt0014|Predicted in-hospital postop mortality: 94.29,%
 - id: score 62
   input:
     1:
@@ -855,7 +855,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 62
-      gt0014|Predicted in-hospital postop mortality: 94.71 %
+      gt0014|Predicted in-hospital postop mortality: 94.71,%
 - id: score 63
   input:
     1:
@@ -870,7 +870,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 63
-      gt0014|Predicted in-hospital postop mortality: 95.11 %
+      gt0014|Predicted in-hospital postop mortality: 95.11,%
 - id: score 67
   input:
     1:
@@ -885,7 +885,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 67
-      gt0014|Predicted in-hospital postop mortality: 96.94 %
+      gt0014|Predicted in-hospital postop mortality: 96.94,%
 - id: score 68
   input:
     1:
@@ -900,7 +900,7 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 68
-      gt0014|Predicted in-hospital postop mortality: 97.01 %
+      gt0014|Predicted in-hospital postop mortality: 97.01,%
 - id: score 17
   input:
     1:
@@ -915,4 +915,4 @@ test_cases:
   expected_output:
     1:
       gt0012|RiskE Score: 17
-      gt0014|Predicted in-hospital postop mortality: 16.87 %
+      gt0014|Predicted in-hospital postop mortality: 16.87,%
